# SimpleUnityVideoPlayer

./: .gitignore  README.md
Assets/: NativeUpdateTexture.unity  RenderCamera.unity  VideoPlayer-CPU.unity  VideoPlayer-CommandBuffer.unity  VideoPlayer-Normal.unity  VideoPlayer-OPENGL.unity  VideoPlayer.unity
Assets/Data/: frame-1-u.origin  frame-1-v.origin  frame-1-y.origin  output.yuv
Assets/Resources/: 420ToRGB.mat  I420toRGB.shader
Assets/Scripts/: LibRenderPluginExport.cs  LibVideoPlayerExport.cs  SimpleDebuger.cs  SimpleVideoPlayer.cs  TestDLLExport.cs  VideoPlayer_RenderAPI.cs  VideoPlayer_UnityCommandBuf.cs
Assets/Scripts/RenderCamera/: Example.cs  RecordCamera.cs
Assets/VideoCodec/: I420toRGB.shader  SimpleShader.shader  TinyVideoPlayer.cs  VideoDecodeExample.cs  YUVImageProcess.cs
FFMpeg/Debug/: FFMpeg.ilk
FFMpeg/FFMpeg/: FFMpeg.cpp  FFMpeg.vcxproj  FFMpeg.vcxproj.filters  frame-1-u.origin  frame-1-v.origin  frame-1-y.origin  frame-2-u.origin  frame-2-v.origin  frame-2-y.origin  frame-3-u.origin  frame-3-v.origin  frame-3-y.origin  frame-4-u.origin  frame-4-v.origin  frame-4-y.origin  frame-5-u.origin  frame-5-v.origin  frame-5-y.origin  frame-6-u.origin  frame-6-v.origin  frame-6-y.origin
FFMpeg/FFMpeg/Debug/: vc141.idb
FFMpeg/FFMpeg/Debug/FFMpeg.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FFMpeg.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
FFMpeg/FFMpeg/x64/Debug/: vc141.idb
FFMpeg/FFMpeg/x64/Debug/FFMpeg.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FFMpeg.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
FFMpeg/x64/Debug/: FFMpeg.ilk
FFMpegSources/NativePlayer/: CMakeLists.txt
FFMpegSources/NativePlayer/chatengine/: CMakeLists.txt
FFMpegSources/NativePlayer/chatengine/include/: chatEngine.h  chatEngineExport.h
FFMpegSources/NativePlayer/chatengine/src/: chatEngine.cpp  chatEngineLib.cpp  simpletools.cpp
FFMpegSources/NativePlayer/renderplugin/: CMakeLists.txt  PlatformBase.h  RenderAPI.cpp  RenderAPI.h  RenderAPI_D3D11.cpp  RenderAPI_D3D12.cpp  RenderAPI_Export.cpp  RenderAPI_OpenGLCoreES.cpp
FFMpegSources/NativePlayer/src/: VideoPlayer.cpp  main.cpp
FFMpegSources/NativePlayer/videoplayer/: CMakeLists.txt
FFMpegSources/NativePlayer/videoplayer/include/: simpleVideoPlayer.h  videoPlayerExport.h  videoPlayerLib.h
FFMpegSources/NativePlayer/videoplayer/src/: simpleVideoPlayer.cpp  videoPlayerLib.cpp  videoPlayerLibExport.cpp
FFMpegSources/SimpleDemoForCallNative/SimpleDemoForCallNative/: Program.cs  Tools.cs
FFMpegSources/SimpleDemoForCallNative/SimpleDemoForCallNative/Properties/: AssemblyInfo.cs
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
